<resources>
    <string name="action_settings">Settings</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="app_name">KPLC</string>

    <string name="billing">Billing</string>
    <string name="buy_tokens">Buy Tokens</string>

    <string name="contact">Contact</string>

    <string name="developer_settings">Developer Settings</string>

    <string name="facebook">Facebook</string>

    <string name="google">Google+</string>

    <string name="linkedin">LinkedIn</string>

    <string name="make_a_payment">Make A Payment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="not_updated_yet">暂未更新过</string>

    <string name="outage_map">Outage Map</string>

    <string name="payment">Payment</string>
    <string name="postpaid_balance">Postpaid Balance</string>
    <string name="postpaid_number">Enter your phone number</string>
    <string name="postpaid_sms">Enter message</string>
    <string name="prepaid_balance">Prepaid Balance</string>
    <string name="pull_to_refresh">Pull down to fresh</string>

    <string name="refreshing">Loading…</string>
    <string name="release_to_refresh">Release to fresh</string>
    <string name="report_outage">Report Outage</string>
    <string name="report_restoration">Report Restoration</string>

    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="social_media">Newsfeed</string>

    <string name="title_activity_twitter_timeline">Whatever</string>
    <string name="title_activity_postpaid_detail">Bill</string>
    <string name="time_error">时间有问题</string>
    <string name="twitter">Twitter</string>

    <string name="failure_dialog">Characters Did Not Match! Report Not Sent!</string>
    <string name="report_dialog">To report a power outage, type the following characters and press report.</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>

    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="logout">Logout</string>
    <string name="not_online_dialog">The app is not online! Enable data or connect to Wifi to use all of the features of the App.</string>
    <string name="ok">OK</string>
    <string name="skip_warning">If you skip logging in, many of the features of the App will not work!</string>
    <string name="skip">SKIP</string>
    <string name="go_back">GO BACK</string>
    <string name="login">Login</string>
    <string name="not_logged_in_warning">You are not logged in, so this feature will not work. Do you want to log in?</string>
    <string name="no">No</string>
    <string name="show_SMS_warning">You are not online. If you want, we can send an SMS to do this, but it will charge you standard fees for the SMS.</string>
    <string name="contact_str">Please contact us if you have any comments or suggestions. This app is developed by the University of California Berkeley and the University of Massachusettes Amherst.</string>
    <string name="outage_report">Report Outage</string>
    <string name="billingandpayment">Billing and Payment</string>
    <string name="outages">Outages</string>
    <string name="refresh_button">Refresh</string>
    <string name="reload">Reload</string>
    <string name="title_activity_outage">OutageActivity</string>
    <string name="set">Set</string>
    <string name="prompt_set_address">Your home address is not set! To report an outage at home, please set your address!</string>
    <string name="prompt_set_account">Your meter number or account number is not set! To report an outage, please set your meter number or account number!</string>
    <string name="show_need_account_numer_or_address">Please enter a location and an account number!</string>
    <string name="show_need_account">Please enter an account number!</string>
    <string name="show_need_location">Please enter a location!</string>
</resources>
